# azure-email

./: CHANGELOG.md  LICENSE  README.md  azure-email.cabal  default.nix
nix/: overrides.nix
src/Azure/: Email.hs
