cabal-version: 2.2
name:
  azure-email
version:
  0.1.0.0
--synopsis:
--description:
homepage:
  https://github.com/layer-3-communications/azure-email
license:
  BSD-3-Clause
author:
  layer-3-communications
maintainer:
  dcartwright@layer3com.com
--copyright:
category:
  Web
build-type:
  Simple
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    Azure.Email
  build-depends:
      base >=4.7 && <4.13
    , RSA
    , aeson
    , base64-bytestring
    , bytestring
    , crypto-pubkey-openssh
    , cryptonite
    , exceptions
    , http-client
    , http-client-tls
    , lens-aeson
    , microlens
    , text
    , time
    , uuid
    , wreq
    , aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
