cabal-version: 2.2
name:
  azure-email
version:
  0.1.1
synopsis:
  azure email api
description:
  Send emails using the Microsoft Azure API
homepage:
  https://github.com/layer-3-communications/azure-email
license:
  BSD-3-Clause
author:
  layer-3-communications
maintainer:
  dcartwright@layer3com.com
copyright:
  copyright (c) 2019 Layer 3 Communications, LLC.
category:
  Web
build-type:
  Simple
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    Azure.Email
  build-depends:
    , RSA
    , aeson
    , base >=4.7 && <4.14
    , base64-bytestring
    , bytestring
    , crypto-pubkey-openssh
    , cryptonite
    , exceptions
    , http-client
    , http-client-tls
    , lens-aeson
    , microlens
    , text
    , time
    , uuid
    , wreq
  hs-source-dirs:
    src
  default-language:
    Haskell2010
